--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!--
-    HTML
-    Hypertext
-        Hipertexto
-            <a>
-    Markup
-        Marcação
-    Language
-        Linguagem
-            -->
-
 <!DOCTYPE html>
 <html lang="pt-br"> <!--lang é um atributo que define a linguagem da página-->
 
@@ -16,16 +5,18 @@
     <meta charset="UTF-8"> <!-- charset é um atributo que define um enconding de caracteres-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--name e content são atributos para adaptar em telas -->
     <title>eStuddy</title> <!--tag que define o título da página-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/partials/page-landing.css">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
     </head>
 
 <body id="page-landing">
 
     <div id="cover">
-        <h1>eStuddy</h1>
-        
-        <p>A sua melhor plataforma de estudos e aprendizado</p>
+        <div class="logo-cover">
+            <img src="" alt="eStuddy">
+            <h2>A sua melhor plataforma de estudos e aprendizado</h2>
+        </div>
                
         <button>Estudar</button>
         <button>Ensinar</button>
