CSS de Responsividade

--- a/index.html
+++ b/index.html
@@ -8,18 +8,34 @@
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/partials/page-landing.css">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
-    </head>
+</head>
 
 <body id="page-landing">
 
     <div id="cover">
         <div class="logo-cover">
-            <img src="" alt="eStuddy">
-            <h2>A sua melhor plataforma de estudos e aprendizado</h2>
+            <img src="/images/lognova.png" alt="eStuddy">
+            <h2>A sua melhor plataforma de estudos.</h2>
         </div>
-               
-        <button>Estudar</button>
-        <button>Ensinar</button>
+
+        <img class="hero-image" src="images/landing.svg" alt="Plataforma de estudos">
+
+        <div class="buttons-cover">
+            <a class="study" href="https://google.com">
+                <img src="/images/icons/study.svg" alt="Estudar">
+                Estudar
+            </a>
+            <a class="teach" href="https://google.com">
+                <img src="/images/icons/give-classes.svg" alt="Ensinar">
+                Ensinar
+            </a>
+        </div>
+
+        <p class="total-connections">
+            Total de 200 conexões já realizadas
+            <img src="/images/icons/purple-heart.svg" alt="Coração roxo">
+        </p>
+
     </div>
 
 </body>
